--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="card__image-container">
             <img
               class="card__profile-img"
-              src="./assets-ignore/octocat-img.png"
+              src="./assets/octocat-img.png"
               alt=""
               id="image"
             />
