--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body class="light-theme">
     <div class="page-wrapper">
       <header class="header">
-        <span class="header__logo">devfinder</span>
+        <h1 class="header__logo">devfinder</h1>
         <button class="header__button" id="switch">
           <span class="header__toggle-word" id="toggle-word">DARK</span>
           <svg
